fix: jumping lines (#4699)
* fix

* fix Origine compact

* fix Ansum

* fix Mapco

--- a/p/themes/Ansum/_list-view.scss
+++ b/p/themes/Ansum/_list-view.scss
@@ -16,8 +16,7 @@
 
 		&:not(.current):hover .item.title {
 			background: variables.$grey-lighter;
-
-
+			bottom: 3px;
 		}
 	}
 
