--- a/p/themes/Mapco/_list-view.scss
+++ b/p/themes/Mapco/_list-view.scss
@@ -15,8 +15,7 @@
 
 		&:not(.current):hover .item.title {
 			background: variables.$grey-lighter;
-
-
+			bottom: 3px;
 		}
 	}
 
