--- a/p/themes/base-theme/frss.rtl.css
+++ b/p/themes/base-theme/frss.rtl.css
@@ -1123,10 +1123,6 @@ input[type="search"] {
 /*=== Feed article header and footer */
 .flux_header {
 	background: inherit;
-	position: static;
-}
-
-.flux:hover {
 	position: relative;
 }
 
@@ -1160,7 +1156,7 @@ a.website:hover .favicon {
 	background-color: var(--frss-background-color);
 	max-width: calc(100% - 320px);
 	position: absolute;
-	top: 0.25rem
+	bottom: 2px;
 }
 
 .flux:not(.current):hover .wrapTitle_desktop .item.title {
